--- a/Views&Controllers/Chat/HCChatTextTableViewCell.xib
+++ b/Views&Controllers/Chat/HCChatTextTableViewCell.xib
@@ -8,14 +8,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HCChatTextTableViewCell" rowHeight="119" id="KGk-i7-Jjw" customClass="HCChatTableViewCell" customModule="AppFriendsSwiftSample" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HCChatTextTableViewCell" rowHeight="119" id="KGk-i7-Jjw" customClass="HCChatTableViewCell" customModule="AppFriendsUI" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="119"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="118.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bubble1" translatesAutoresizingMaskIntoConstraints="NO" id="Lz7-1O-orY">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Lz7-1O-orY">
                         <rect key="frame" x="32" y="8" width="280" height="67"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TP7-Pp-Kok">
@@ -95,7 +95,4 @@
             <point key="canvasLocation" x="288" y="319.5"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="bubble1" width="120" height="51"/>
-    </resources>
 </document>
