--- a/Views&Controllers/Chat/HCChatSystemMessageTableViewCell.xib
+++ b/Views&Controllers/Chat/HCChatSystemMessageTableViewCell.xib
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HCChatTextTableViewCell" rowHeight="49" id="KGk-i7-Jjw" customClass="HCChatTableViewCell" customModule="AppFriendsUIDev" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HCChatSystemMessageTableViewCell" rowHeight="49" id="KGk-i7-Jjw" customClass="HCChatTableViewCell" customModule="AppFriendsUI" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -30,6 +29,9 @@
                     <constraint firstItem="Cbc-OE-Fta" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="4" id="jpQ-Vb-dtP"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="messageContentLabel" destination="Cbc-OE-Fta" id="XL5-Pg-YQ5"/>
+            </connections>
             <point key="canvasLocation" x="288" y="306.5"/>
         </tableViewCell>
     </objects>
