added a game demo view

--- a/Example/AFChatUISample/AFChatUISample/Base.lproj/Main.storyboard
+++ b/Example/AFChatUISample/AFChatUISample/Base.lproj/Main.storyboard
@@ -5,11 +5,11 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--Item-->
+        <!--Profile-->
         <scene sceneID="syS-iA-EIn">
             <objects>
                 <navigationController id="kWH-7z-AbZ" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="o5V-uT-Snh"/>
+                    <tabBarItem key="tabBarItem" title="Profile" id="o5V-uT-Snh"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="5Nr-ky-B9v">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -120,17 +120,66 @@
                     <connections>
                         <segue destination="kWH-7z-AbZ" kind="relationship" relationship="viewControllers" id="v4V-sF-SBo"/>
                         <segue destination="EpO-UF-HhA" kind="relationship" relationship="viewControllers" id="gOn-Tf-UU4"/>
+                        <segue destination="W0y-Zz-m3k" kind="relationship" relationship="viewControllers" id="34J-Jk-iL7"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yps-iC-zPt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1849" y="-1069"/>
         </scene>
-        <!--Item-->
+        <!--Root View Controller-->
+        <scene sceneID="wgB-3H-Dmo">
+            <objects>
+                <tableViewController id="85k-WF-aZh" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="0d0-IP-4XL">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="o1k-ga-BHo">
+                                <rect key="frame" x="0.0" y="92" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="o1k-ga-BHo" id="cuJ-6z-aNk">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="85k-WF-aZh" id="YV1-YM-Cfs"/>
+                            <outlet property="delegate" destination="85k-WF-aZh" id="Djj-Kg-dWi"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="Pld-UQ-eiT"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KnL-mC-vSR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-901" y="-5"/>
+        </scene>
+        <!--Game-->
+        <scene sceneID="uMO-We-waI">
+            <objects>
+                <navigationController id="W0y-Zz-m3k" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Game" id="9wV-DC-HWV"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="oyy-oI-EZP">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="85k-WF-aZh" kind="relationship" relationship="rootViewController" id="Cnc-ge-Uds"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7Nl-1o-HnK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1332" y="-5"/>
+        </scene>
+        <!--Search-->
         <scene sceneID="paO-lH-xiE">
             <objects>
                 <navigationController id="EpO-UF-HhA" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="OXl-Xx-K6q"/>
+                    <tabBarItem key="tabBarItem" title="Search" id="OXl-Xx-K6q"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="CkV-s5-miN">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
