--- a/Example/AFChatUISample/AFChatUISample/ConfirmRejectTableViewCell.xib
+++ b/Example/AFChatUISample/AFChatUISample/ConfirmRejectTableViewCell.xib
@@ -20,6 +20,9 @@
                         <state key="normal" title="Reject">
                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         </state>
+                        <connections>
+                            <action selector="rejected:" destination="gTV-IL-0wX" eventType="touchUpInside" id="a4y-L1-GKZ"/>
+                        </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BXz-qG-SZQ">
                         <rect key="frame" x="168" y="6" width="144" height="38"/>
@@ -27,6 +30,9 @@
                         <state key="normal" title="Accept">
                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         </state>
+                        <connections>
+                            <action selector="accepted:" destination="gTV-IL-0wX" eventType="touchUpInside" id="Ye5-0s-oCP"/>
+                        </connections>
                     </button>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
